Fixing another header issue on firefoxe

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -447,7 +447,7 @@ video {
     text-align: center;
 
     .wrapper {
-      width: 60vw;
+      width: 65vw;
       margin: 0 auto;
     }
   }
